--- a/css/home.css
+++ b/css/home.css
@@ -26,8 +26,15 @@ header {
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    background-image: url(../img/homebig1.png);
+    background-position: fixed;
     position: relative;
     top: 0; }
+    header .main-visual .img-home {
+      background-image: url(../img/homebig1.png);
+      background-size: cover;
+      height: 100%;
+      background-attachment: fixed; }
     header .main-visual .text {
       width: 100%;
       position: absolute;
@@ -41,7 +48,7 @@ header {
       header .main-visual .text h2 {
         font-size: 1em; }
 
-main .msg {
+main .msg, main .msg2 {
   height: 100vh;
   background-color: #000;
   color: #fff;
@@ -51,10 +58,103 @@ main .msg {
   letter-spacing: 0.14em;
   line-height: 1.7; }
 main .big-com1 {
-  height: 100vh; }
+  height: 100vh;
+  overflow: hidden;
+  position: relative; }
   main .big-com1 .img-home {
+    overflow: hidden;
     height: 100%;
-    background-image: url(""); }
+    background-image: url("../img/cover1.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; }
+  main .big-com1 .comment {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 35%;
+    color: #fff; }
+main .small-com1 {
+  height: 100vh;
+  overflow: hidden;
+  position: relative; }
+  main .small-com1 .img-home {
+    overflow: hidden;
+    height: 100%;
+    background-image: url("../img/cover2.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; }
+  main .small-com1 .left-comment {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    padding: 3%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff; }
+main .small-com2 {
+  height: 100vh;
+  overflow: hidden;
+  position: relative; }
+  main .small-com2 .img-home {
+    overflow: hidden;
+    height: 100%;
+    background-image: url("../img/cover3.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; }
+  main .small-com2 .right-comment {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    box-sizing: border-box;
+    padding: 3%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff; }
+main .big-com2 {
+  height: 50vh;
+  overflow: hidden;
+  position: relative; }
+  main .big-com2 .img-home {
+    overflow: hidden;
+    height: 100%;
+    background-image: url("../img/cover1.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; }
+  main .big-com2 .comment {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 35%;
+    color: #fff;
+    text-align: center; }
+main .small-com3 {
+  height: 100vh;
+  overflow: hidden;
+  position: relative; }
+  main .small-com3 .img-home {
+    overflow: hidden;
+    height: 100%;
+    background-image: url("../img/cover3.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; }
+  main .small-com3 .right-comment {
+    position: absolute;
+    width: 70%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    box-sizing: border-box;
+    padding: 3%;
+    background-color: black;
+    color: #fff; }
 
 footer {
   width: 100%;
