--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -77,6 +77,56 @@ main{
 	}
 }
 
+.sns{
+	margin: 100px auto 200px;
+	width: 850px;
+	overflow: hidden;
+	position: relative;
+
+	a{
+		display: inline-block;
+		margin: 0 60px;
+	}
+	.icon{
+		float: left;
+		width: 150px;
+		height: 150px;
+		border-radius: 50%;
+		text-align: center;
+		background-color: #eee;
+		position: relative;
+		&:last-child{
+			margin-right: 0;
+		}
+		.fa{
+			width: 50px;font-size: 60px;
+			position: absolute;
+			top: 50%;
+			margin-top: -30px;
+			left: 50%;
+			margin-left: -23px;
+			color: #fff;
+		}
+	}
+}
+
+.link{
+	width: 850px;
+	margin: 0 auto;
+	overflow: hidden;
+	margin-bottom: 100px;
+	.con{
+		width: 400px;
+		height: 400px;
+		float: left;
+		margin-right: 50px;
+		background-color: #000;
+		&:last-child{
+			margin-right: 0;
+		}
+	}
+}
+
 footer{
 	width: 100%;
 	height: 180px;
