--- a/css/main.css
+++ b/css/main.css
@@ -1,160 +1,247 @@
 * {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 .container {
   width: 700px;
   margin: 0 auto;
-  overflow: hidden;
-}
+  overflow: hidden; }
+
+.container2 {
+  width: 800px;
+  margin: 0 auto;
+  overflow: hidden; }
 
 h2 {
   width: 200px;
   margin-left: 30px;
   font-size: 14px;
-  display: inline-block;
-}
+  display: inline-block; }
 
 header {
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: #888;
-}
-header nav {
-  position: fixed;
-  width: 100%;
-  top: 30px;
-}
-header nav h3 {
-  display: inline;
-  margin-left: 30px;
-}
-header nav ul {
-  float: right;
-  margin-right: 30px;
-}
-header nav ul li {
-  list-style-type: none;
-  float: left;
-  padding: 0 10px;
-}
-header nav ul li a {
-  color: #000;
-  text-decoration: none;
-  display: block;
-}
-header nav ul li a:hover {
-  border-bottom: 1.8px solid #000;
-}
-header .main-visual img {
-  width: 100%;
-}
+  background-color: #888; }
+  header nav {
+    position: fixed;
+    width: 100%;
+    top: 30px;
+    z-index: 40; }
+    header nav h3 {
+      display: inline;
+      margin-left: 30px; }
+    header nav ul {
+      float: right;
+      margin-right: 30px; }
+      header nav ul li {
+        list-style-type: none;
+        float: left;
+        padding: 0 10px; }
+        header nav ul li a {
+          color: #000;
+          text-decoration: none;
+          display: block; }
+          header nav ul li a:hover {
+            border-bottom: 1.8px solid #000; }
+  header .main-visual img {
+    width: 100%; }
 
 .magazine {
   height: 100vh;
   width: 100%;
   margin: 150px 0 50px 0;
-  background-color: #fff;
-}
-.magazine .title {
-  font-weight: normal;
-  font-size: 14px;
-}
-.magazine h1 {
-  padding: 10px 0 30px 0;
-  font-size: 2.8em;
-  font-weight: normal;
-  text-align: center;
-}
-.magazine p {
-  letter-spacing: 0.18em;
-  font-size: 12px;
-  line-height: 2.1em;
-  text-align: center;
-}
-.magazine p .big {
-  font-size: 2em;
-}
+  background-color: #fff; }
+  .magazine .title {
+    font-weight: normal;
+    font-size: 14px; }
+  .magazine h1 {
+    padding: 10px 0 30px 0;
+    font-size: 2.8em;
+    font-weight: normal;
+    text-align: center; }
+  .magazine p {
+    letter-spacing: 0.18em;
+    font-size: 12px;
+    line-height: 2.1em;
+    text-align: center; }
+    .magazine p .big {
+      font-size: 2em; }
 
 .cover {
   height: 100vh;
   width: 100%;
-  margin: 150px 0;
-}
-.cover .container {
-  height: 465px;
-  overflow: hidden;
-  position: relative;
-}
-.cover .main-cover {
-  width: 330px;
-  margin-right: 50px;
-  float: left;
-}
-.cover .select {
-  float: left;
-  overflow: hidden;
-}
-.cover .select img {
-  bottom: -10px;
-  margin-right: 1px;
-}
-.cover .select h3 {
-  text-align: center;
-  font-weight: normal;
-  display: inline-block;
-}
-.cover .select .sub-cover {
-  bottom: 0;
-  position: absolute;
-}
+  margin: 150px 0; }
+  .cover .container {
+    height: 465px;
+    overflow: hidden;
+    position: relative; }
+  .cover .main-cover {
+    width: 330px;
+    margin-right: 50px;
+    float: left; }
+  .cover .select {
+    float: left;
+    overflow: hidden; }
+    .cover .select img {
+      bottom: -10px;
+      margin-right: 1px; }
+    .cover .select h3 {
+      text-align: center;
+      font-weight: normal;
+      display: inline-block; }
+    .cover .select .sub-cover {
+      bottom: 0;
+      position: absolute; }
 
 .contents {
-  height: 100vh;
+  height: 50vh;
   width: 100%;
-}
+  background-size: cover;
+  background-image: url(../img/home_bikes.jpg);
+  background-attachment: fixed; }
+
+.contents2 {
+  padding-top: 40px;
+  width: 100%;
+  background-color: #000;
+  color: #fff; }
+  .contents2 h3 {
+    text-align: center;
+    font-size: 2.8em; }
+  .contents2 h4 {
+    padding-bottom: 30px; }
+  .contents2 p {
+    font-size: 14px;
+    margin-top: 50px;
+    padding-bottom: 70px; }
+  .contents2 img {
+    width: 800px; }
+  .contents2 .con-img {
+    width: 800px; }
 
 .webcontents {
   height: 100vh;
   width: 100%;
-}
-.webcontents .webmaga {
-  width: 233px;
-  height: 233px;
-  border: 1px #fff solid;
-  box-sizing: border-box;
+  padding: 120px 0;
   background-color: #000;
-  float: left;
-}
-.webcontents .webmaga:hover {
-  background-color: #888;
-}
+  color: #fff; }
+  .webcontents h3 {
+    text-align: center;
+    font-size: 2.8em;
+    padding-bottom: 50px; }
+  .webcontents .webmaga {
+    width: 233px;
+    height: 233px;
+    border: 1px #fff solid;
+    box-sizing: border-box;
+    background-color: #000;
+    float: left; }
+    .webcontents .webmaga:hover {
+      background-color: #888; }
 
 .stock {
-  height: 100vh;
   width: 100%;
-}
+  background-color: #000;
+  color: #fff; }
+  .stock h3 {
+    text-align: center;
+    font-size: 2.8em;
+    padding: 30px 0; }
+  .stock .left {
+    width: 420px;
+    float: left; }
+    .stock .left h4 {
+      font-size: 2.3em;
+      border-left: #fff solid 8px;
+      padding-left: 10px;
+      margin-bottom: 20px; }
+    .stock .left p {
+      font-size: 1.2em; }
+  .stock .right {
+    width: 240px;
+    float: left; }
+    .stock .right p {
+      font-size: 0.7em; }
+    .stock .right h5 {
+      font-size: 2em;
+      border-left: #fff solid 4px;
+      padding-left: 6px;
+      margin-bottom: 20px; }
+  .stock .right2 {
+    width: 130px;
+    float: left; }
+    .stock .right2 p {
+      font-size: 0.7em; }
+    .stock .right2 h5 {
+      font-size: 2em;
+      border-left: #fff solid 4px;
+      padding-left: 6px;
+      margin-bottom: 20px; }
 
 .contact {
-  height: 100vh;
   width: 100%;
-}
+  height: 50vh;
+  padding-bottom: 50px;
+  background-color: #000;
+  color: #fff;
+  text-align: center; }
+  .contact h3 {
+    text-align: center;
+    font-size: 2.8em;
+    padding: 30px 0; }
+  .contact a {
+    text-decoration: none;
+    border: solid #fff 1px;
+    padding: 10px;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+    color: #fff;
+    transition: all .5s ease; }
+    .contact a:hover {
+      background-color: #fff;
+      color: #000; }
 
 footer {
   width: 100%;
   height: 180px;
-}
-footer p {
-  text-align: center;
-  padding-top: 30px;
-  font-size: 10px;
-  letter-spacing: 0.2em;
-}
-footer p #c {
-  font-size: 12px;
-  margin-top: 3px;
-}
+  position: relative; }
+  footer h4 {
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 50%;
+    margin-left: -25px;
+    color: #fff;
+    background-color: #000;
+    width: 50px;
+    height: 20px;
+    font-size: 10px;
+    font-weight: normal;
+    cursor: pointer; }
+    footer h4 a {
+      text-decoration: none;
+      color: #fff; }
+  footer .sns {
+    text-align: center;
+    width: 120px;
+    margin: 0 auto;
+    padding: 10px 0; }
+    footer .sns p {
+      padding-bottom: 10px; }
+    footer .sns .icon {
+      float: left;
+      width: 40px;
+      font-size: 25px;
+      color: #000; }
+  footer p {
+    text-align: center;
+    padding-top: 30px;
+    font-size: 10px;
+    letter-spacing: 0.2em; }
+    footer p #c {
+      font-size: 12px;
+      margin-top: 3px; }
 
 /*# sourceMappingURL=main.css.map */
