--- a/scss/enjinai.scss
+++ b/scss/enjinai.scss
@@ -65,7 +65,33 @@ main{
 		}
 		.p1{
 			.image{
-				background-image: url();
+				background-image: url(../img/enjinai_kiryu.jpg);
+				background-size: cover;
+			}
+		}
+		.p2{
+			.image{
+				background-image: url(../img/enjinai_ushio.jpg);
+				background-size: cover;
+				background-position: 0 30%;
+			}
+		}
+		.p3{
+			.image{
+				background-image: url(../img/enjinai_ibata.jpg);
+				background-size: cover;
+			}
+		}
+		.p4{
+			.image{
+				background-image: url(../img/enjinai_mori.jpg);
+				background-size: cover;
+			}
+		}
+		.p5{
+			.image{
+				background-image: url(../img/enjinai_ibata.jpg);
+				background-size: cover;
 			}
 		}
 	}
@@ -74,6 +100,40 @@ main{
 footer{
 	width: 100%;
 	height: 180px;
+	position: relative;
+	h4{
+		position: absolute;
+		text-align: center;
+		top: 0;
+		left: 50%;
+		margin-left: -25px;
+		color: #fff;
+		background-color: #000;
+		width: 50px;
+		height: 20px;
+		font-size: 10px;
+		font-weight: normal;
+		cursor: pointer;
+		a{
+			text-decoration: none;
+			color: #fff;
+		}
+	}
+	.sns{
+		text-align: center;
+		width: 120px;
+		margin: 0 auto;
+		padding: 10px 0;
+		p{
+			padding-bottom: 10px;
+		}
+		.icon{
+			float: left;
+			width: 40px;
+			font-size: 25px;
+			color: #000;
+		}
+	}
 	p{
 		text-align: center;
 		padding-top: 30px;
