--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,12 @@
 	overflow: hidden;
 }
 
+.container2{
+	width: 800px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
 h2{
 	width: 200px;
 	margin-left: 30px;
@@ -34,6 +40,7 @@ header{
 		position: fixed;
 		width: 100%;
 		top: 30px;
+		z-index: 40;
 		h3{
 			display:inline;
 			margin-left: 30px;
@@ -124,13 +131,49 @@ header{
 }
 
 .contents{
-	height: 100vh;
+	height: 50vh;
 	width: 100%;
+	background-size: cover;
+	background-image: url(../img/home_bikes.jpg);
+	background-attachment:fixed;
+}
+
+.contents2{
+	padding-top: 40px;
+	width: 100%;
+	background-color: #000;
+	color: #fff;
+	h3{
+		text-align: center;
+		font-size: 2.8em;
+	}
+	h4{
+		padding-bottom: 30px;
+	}
+	p{
+		font-size: 14px;
+		margin-top: 50px;
+		padding-bottom: 70px;
+	}
+	img{
+		width: 800px;
+	}
+	.con-img{
+		width: 800px;
+	}
 }
 
 .webcontents{
 	height: 100vh;
 	width: 100%;
+	padding: 120px 0;
+	background-color: #000;
+	color: #fff;
+	h3{
+		text-align: center;
+		font-size: 2.8em;
+		padding-bottom: 50px;
+	}
 	.webmaga{
 		width: 233px;
 		height: 233px;
@@ -145,18 +188,120 @@ header{
 }
 
 .stock{
-	height: 100vh;
 	width: 100%;
+	background-color: #000;
+	color: #fff;
+	h3{
+		text-align: center;
+		font-size: 2.8em;
+		padding: 30px 0;
+	}
+	.left{
+		width: 420px;
+		float: left;
+		h4{
+			font-size: 2.3em;
+			border-left: #fff solid 8px;
+			padding-left: 10px;
+			margin-bottom: 20px;
+		}
+		p{
+			font-size: 1.2em;
+		}
+	}
+	.right{
+		width: 240px;
+		float: left;
+		p{
+			font-size: 0.7em;
+		}
+		h5{
+			font-size: 2em;
+			border-left: #fff solid 4px;
+			padding-left: 6px;
+			margin-bottom: 20px;
+		}
+	}
+	.right2{
+		width: 130px;
+		float: left;
+		p{
+			font-size: 0.7em;
+		}
+		h5{
+			font-size: 2em;
+			border-left: #fff solid 4px;
+			padding-left: 6px;
+			margin-bottom: 20px;
+		}
+	}
 }
 
 .contact{
-	height: 100vh;
 	width: 100%;
+	height: 50vh;
+	padding-bottom: 50px;
+	background-color: #000;
+	color: #fff;
+	text-align: center;
+	h3{
+		text-align: center;
+		font-size: 2.8em;
+		padding: 30px 0;
+	}
+	a{
+		text-decoration: none;
+		border: solid #fff 1px;
+		padding: 10px;
+		display: block;
+		width: 60%;
+		margin: 0 auto;
+		color: #fff;
+		transition: all .5s ease;
+		&:hover{
+			background-color: #fff;
+			color: #000;
+		}
+	}
 }
 
 footer{
 	width: 100%;
 	height: 180px;
+	position: relative;
+	h4{
+		position: absolute;
+		text-align: center;
+		top: 0;
+		left: 50%;
+		margin-left: -25px;
+		color: #fff;
+		background-color: #000;
+		width: 50px;
+		height: 20px;
+		font-size: 10px;
+		font-weight: normal;
+		cursor: pointer;
+		a{
+			text-decoration: none;
+			color: #fff;
+		}
+	}
+	.sns{
+		text-align: center;
+		width: 120px;
+		margin: 0 auto;
+		padding: 10px 0;
+		p{
+			padding-bottom: 10px;
+		}
+		.icon{
+			float: left;
+			width: 40px;
+			font-size: 25px;
+			color: #000;
+		}
+	}
 	p{
 		text-align: center;
 		padding-top: 30px;
