--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -8,7 +8,7 @@
 }
 
 .container{
-	width:850px;
+	width:700px;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -51,6 +51,17 @@ main{
 	.concept{
 		text-align: center;
 		height: 80vh;
+		padding-top: 50px;
+		h4{
+			font-size: 2em;
+		}
+		#wakamono{
+			padding-bottom: 20px;
+		}
+		p{
+			padding-top: 50px;
+			font-size: 1em;
+		}
 	}
 	article{
 		hr{
@@ -67,59 +78,28 @@ main{
 				background-color: #d8d8d8;
 			}
 			h6{
-				font-size: 1.4em;
+				font-size: 1.1em;
 				padding-top: 10px;
 			}
 			h5{
-				font-size: 2.8em;
+				font-size: 2em;
+				padding-bottom: 60px;
 			}
 		}
 	}
 }
 
-.sns{
-	margin: 100px auto 200px;
-	width: 850px;
-	overflow: hidden;
-	position: relative;
-
-	a{
-		display: inline-block;
-		margin: 0 60px;
-	}
-	.icon{
-		float: left;
-		width: 150px;
-		height: 150px;
-		border-radius: 50%;
-		text-align: center;
-		background-color: #eee;
-		position: relative;
-		&:last-child{
-			margin-right: 0;
-		}
-		.fa{
-			width: 50px;font-size: 60px;
-			position: absolute;
-			top: 50%;
-			margin-top: -30px;
-			left: 50%;
-			margin-left: -23px;
-			color: #fff;
-		}
-	}
-}
 
 .link{
-	width: 850px;
+	width: 700px;
 	margin: 0 auto;
 	overflow: hidden;
 	margin-bottom: 150px;
 	.con{
-		width: 400px;
-		height: 400px;
+		width: 300px;
+		height: 300px;
 		float: left;
-		margin-right: 50px;
+		margin-right: 100px;
 		background-color: #000;
 		&:last-child{
 			margin-right: 0;
@@ -130,6 +110,40 @@ main{
 footer{
 	width: 100%;
 	height: 180px;
+	position: relative;
+	h4{
+		position: absolute;
+		text-align: center;
+		top: 0;
+		left: 50%;
+		margin-left: -25px;
+		color: #fff;
+		background-color: #000;
+		width: 50px;
+		height: 20px;
+		font-size: 10px;
+		font-weight: normal;
+		cursor: pointer;
+		a{
+			text-decoration: none;
+			color: #fff;
+		}
+	}
+	.sns{
+		text-align: center;
+		width: 120px;
+		margin: 0 auto;
+		padding: 10px 0;
+		p{
+			padding-bottom: 10px;
+		}
+		.icon{
+			float: left;
+			width: 40px;
+			font-size: 25px;
+			color: #000;
+		}
+	}
 	p{
 		text-align: center;
 		padding-top: 30px;
