--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,8 +39,22 @@ header{
 	nav{
 		position: fixed;
 		width: 100%;
-		top: 30px;
+		top: 0;
+		height: 60px;
 		z-index: 40;
+		line-height: 60px;
+		-webkit-transition: all .5s ease;
+		   -moz-transition: all .5s ease;
+		    -ms-transition: all .5s ease;
+		     -o-transition: all .5s ease;
+		        transition: all .5s ease;
+		&:hover{
+			background-color: #fff;
+		}
+		img{
+			width: 80px;
+			padding-top:10px;
+		}
 		h3{
 			display:inline;
 			margin-left: 30px;
@@ -56,8 +70,13 @@ header{
 					color: #000;
 					text-decoration: none;
 					display: block;
+					-webkit-transition: all .5s ease;
+				    -moz-transition: all .5s ease;
+				    -ms-transition: all .5s ease;
+				     -o-transition: all .5s ease;
+					transition: all .5s ease;
 					&:hover{
-						border-bottom:1.8px solid #000;
+						color:rgba(0,0,0,0.5);
 					}
 				}
 			}
