--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@ header{
 		        transition: all .5s ease;
 		&:hover{
 			background-color: #fff;
+			border-bottom: 1px #000 solid;
 		}
 		img{
 			width: 80px;
