--- a/css/youth.css
+++ b/css/youth.css
@@ -12,29 +12,34 @@ nav {
   top: 0;
   width: 100%;
   z-index: 30;
-  border-bottom: 1px solid #000; }
+  height: 56px;
+  background-color: #fff;
+  box-shadow: 0px 0px 1px 1px #888; }
   nav h3 {
     text-align: center;
-    padding: 1em 0; }
+    padding-top: 8px; }
 
 header {
-  height: 100vh;
-  margin-top: 4em; }
+  height: 100vh; }
   header .main-visual {
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    background-color: #d8d8d8; }
+    background-image: url(../img/home_cat.jpg);
+    background-size: cover; }
     header .main-visual h1 {
       text-align: center;
-      font-size: 40px;
-      padding: 8em 0;
-      letter-spacing: 0.1em; }
+      font-size: 4em;
+      padding: 5em 0;
+      letter-spacing: 0.1em;
+      color: #fff; }
 
 main .concept {
   text-align: center;
   height: 80vh;
-  padding-top: 50px; }
+  padding-top: 50px;
+  background-color: #000;
+  color: #fff; }
   main .concept h4 {
     font-size: 2em; }
   main .concept #wakamono {
@@ -48,6 +53,9 @@ main article hr {
   margin-bottom: 100px; }
 main article .interview {
   margin-bottom: 75px; }
+  main article .interview a {
+    color: #000;
+    text-decoration: none; }
   main article .interview .taidan {
     width: 850px;
     margin: 0 auto;
@@ -60,40 +68,12 @@ main article .interview {
     font-size: 2em;
     padding-bottom: 60px; }
 
-.link {
-  width: 700px;
-  margin: 0 auto;
-  overflow: hidden;
-  margin-bottom: 150px; }
-  .link .con {
-    width: 300px;
-    height: 300px;
-    float: left;
-    margin-right: 100px;
-    background-color: #000; }
-    .link .con:last-child {
-      margin-right: 0; }
-
 footer {
   width: 100%;
   height: 180px;
-  position: relative; }
-  footer h4 {
-    position: absolute;
-    text-align: center;
-    top: 0;
-    left: 50%;
-    margin-left: -25px;
-    color: #fff;
-    background-color: #000;
-    width: 50px;
-    height: 20px;
-    font-size: 10px;
-    font-weight: normal;
-    cursor: pointer; }
-    footer h4 a {
-      text-decoration: none;
-      color: #fff; }
+  position: relative;
+  background-color: #000;
+  color: #fff; }
   footer .sns {
     text-align: center;
     width: 120px;
@@ -105,7 +85,7 @@ footer {
       float: left;
       width: 40px;
       font-size: 25px;
-      color: #000; }
+      color: #fff; }
   footer p {
     text-align: center;
     padding-top: 30px;
