--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -23,26 +23,30 @@ nav{
 	// background-color: #d8d8d8;
 	width: 100%;
 	z-index: 30;
-	border-bottom: 1px solid #000;
+	height: 56px;
+	background-color: #fff;
+	box-shadow: 0px 0px 1px 1px #888;
 	h3{
 		text-align: center;
-		padding: 1em 0;
+		padding-top: 8px;
+
 	}
 }
 
 header{
 	height: 100vh;
-	margin-top: 4em;
 	.main-visual{
 		height: 100vh;
 		width: 100%;
 		overflow: hidden;
-		background-color:#d8d8d8;
+		background-image:url(../img/home_cat.jpg);
+		background-size: cover;
 		h1{
 			text-align: center;
-			font-size: 40px;
-			padding: 8em 0 ;
+			font-size: 4em;
+			padding: 5em 0 ;
 			letter-spacing: 0.1em;
+			color: #fff;
 		}
 	}
 }
@@ -52,6 +56,8 @@ main{
 		text-align: center;
 		height: 80vh;
 		padding-top: 50px;
+		background-color: #000;
+		color: #fff;
 		h4{
 			font-size: 2em;
 		}
@@ -71,6 +77,10 @@ main{
 		}
 		.interview{
 			margin-bottom: 75px;
+			a{
+				color: #000;
+				text-decoration: none;
+			}
 			.taidan{
 				width: 850px;
 				margin: 0 auto;
@@ -90,45 +100,12 @@ main{
 }
 
 
-.link{
-	width: 700px;
-	margin: 0 auto;
-	overflow: hidden;
-	margin-bottom: 150px;
-	.con{
-		width: 300px;
-		height: 300px;
-		float: left;
-		margin-right: 100px;
-		background-color: #000;
-		&:last-child{
-			margin-right: 0;
-		}
-	}
-}
-
 footer{
 	width: 100%;
 	height: 180px;
 	position: relative;
-	h4{
-		position: absolute;
-		text-align: center;
-		top: 0;
-		left: 50%;
-		margin-left: -25px;
-		color: #fff;
-		background-color: #000;
-		width: 50px;
-		height: 20px;
-		font-size: 10px;
-		font-weight: normal;
-		cursor: pointer;
-		a{
-			text-decoration: none;
-			color: #fff;
-		}
-	}
+	background-color: #000;
+	color: #fff;
 	.sns{
 		text-align: center;
 		width: 120px;
@@ -141,7 +118,7 @@ footer{
 			float: left;
 			width: 40px;
 			font-size: 25px;
-			color: #000;
+			color: #fff;
 		}
 	}
 	p{
