youthのレイアウトを大幅に変更

--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -15,7 +15,6 @@
 
 
 
-
 nav{
 	position: fixed;
 	top: 0;
@@ -33,102 +32,52 @@ nav{
 	}
 }
 
-header{
-	height: 100vh;
-	.main-visual{
-		height: 100vh;
-		width: 100%;
-		overflow: hidden;
-		background-image:url(../img/home_cat.jpg);
-		background-size: cover;
-		h1{
-			text-align: center;
-			font-size: 4em;
-			padding: 5em 0 ;
-			letter-spacing: 0.1em;
-			color: #fff;
-		}
-	}
-}
-
 main{
-	.concept{
-		text-align: center;
-		height: 80vh;
-		padding-top: 50px;
-		background-color: #000;
-		color: #fff;
-		h4{
-			font-size: 2em;
-		}
-		#wakamono{
-			padding-bottom: 20px;
-		}
-		p{
-			padding-top: 50px;
-			font-size: 1em;
-		}
-	}
-	article{
-		hr{
-			width: 850px;
-			margin: 0 auto;
-			margin-bottom: 100px;
-		}
-		.interview{
-			margin-bottom: 75px;
-			a{
-				color: #000;
-				text-decoration: none;
-			}
-			.taidan{
-				width: 850px;
-				margin: 0 auto;
-				height: 420px;
-				background-color: #d8d8d8;
-			}
-			h6{
-				font-size: 1.1em;
-				padding-top: 10px;
-			}
-			h5{
-				font-size: 2em;
-				padding-bottom: 60px;
-			}
-		}
-	}
-}
-
-
-footer{
-	width: 100%;
-	height: 180px;
 	position: relative;
-	background-color: #000;
-	color: #fff;
-	.sns{
-		text-align: center;
-		width: 120px;
-		margin: 0 auto;
-		padding: 10px 0;
-		p{
-			padding-bottom: 10px;
-		}
-		.icon{
-			float: left;
-			width: 40px;
-			font-size: 25px;
-			color: #fff;
+	height: 100vh;
+	overflow: hidden;
+	object-fit: cover;
+	.top{
+		width: 100%;
+		height: 100vh;
+		top: 0;
+		left: 0;
+		position:abdolute;
+		background-image: url(../img/enjinai_kiryu.jpg);
+		background-size: cover;
+		.title-text{
+			text-align: center;
+			h1{
+				font-size: 3em;
+				padding-top: 100px;
+			}
 		}
 	}
-	p{
-		text-align: center;
-		padding-top: 30px;
-		font-size: 10px;
-		letter-spacing: 0.2em;
-		#c{
-			font-size: 12px;
-			margin-top:3px; 
-		}
+	.eye{
+		width: 100%;
+		height: 100vh;
+		top: 0;
+		left: 100%;
+		position:abdolute;
+		background-image: url(../img/enjinai_kiryu.jpg);
+		background-size: cover;
+	}
+	.stylist{
+		width: 100%;
+		height: 100vh;
+		top: 0;
+		left: 200%;
+		position:abdolute;
+		background-image: url(../img/enjinai_kiryu.jpg);
+		background-size: cover;
+	}
+	.dareka{
+		width: 100%;
+		height: 100vh;
+		top: 0;
+		left: 300%;
+		position:abdolute;
+		background-image: url(../img/enjinai_kiryu.jpg);
+		background-size: cover;
 	}
 }
