--- a/css/youth.css
+++ b/css/youth.css
@@ -19,80 +19,47 @@ nav {
     text-align: center;
     padding-top: 8px; }
 
-header {
-  height: 100vh; }
-  header .main-visual {
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background-image: url(../img/home_cat.jpg);
-    background-size: cover; }
-    header .main-visual h1 {
-      text-align: center;
-      font-size: 4em;
-      padding: 5em 0;
-      letter-spacing: 0.1em;
-      color: #fff; }
-
-main .concept {
-  text-align: center;
-  height: 80vh;
-  padding-top: 50px;
-  background-color: #000;
-  color: #fff; }
-  main .concept h4 {
-    font-size: 2em; }
-  main .concept #wakamono {
-    padding-bottom: 20px; }
-  main .concept p {
-    padding-top: 50px;
-    font-size: 1em; }
-main article hr {
-  width: 850px;
-  margin: 0 auto;
-  margin-bottom: 100px; }
-main article .interview {
-  margin-bottom: 75px; }
-  main article .interview a {
-    color: #000;
-    text-decoration: none; }
-  main article .interview .taidan {
-    width: 850px;
-    margin: 0 auto;
-    height: 420px;
-    background-color: #d8d8d8; }
-  main article .interview h6 {
-    font-size: 1.1em;
-    padding-top: 10px; }
-  main article .interview h5 {
-    font-size: 2em;
-    padding-bottom: 60px; }
-
-footer {
-  width: 100%;
-  height: 180px;
+main {
   position: relative;
-  background-color: #000;
-  color: #fff; }
-  footer .sns {
-    text-align: center;
-    width: 120px;
-    margin: 0 auto;
-    padding: 10px 0; }
-    footer .sns p {
-      padding-bottom: 10px; }
-    footer .sns .icon {
-      float: left;
-      width: 40px;
-      font-size: 25px;
-      color: #fff; }
-  footer p {
-    text-align: center;
-    padding-top: 30px;
-    font-size: 10px;
-    letter-spacing: 0.2em; }
-    footer p #c {
-      font-size: 12px;
-      margin-top: 3px; }
+  height: 100vh;
+  overflow: hidden;
+  object-fit: cover; }
+  main .top {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: abdolute;
+    background-image: url(../img/enjinai_kiryu.jpg);
+    background-size: cover; }
+    main .top .title-text {
+      text-align: center; }
+      main .top .title-text h1 {
+        font-size: 3em;
+        padding-top: 100px; }
+  main .eye {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 100%;
+    position: abdolute;
+    background-image: url(../img/enjinai_kiryu.jpg);
+    background-size: cover; }
+  main .stylist {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 200%;
+    position: abdolute;
+    background-image: url(../img/enjinai_kiryu.jpg);
+    background-size: cover; }
+  main .dareka {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 300%;
+    position: abdolute;
+    background-image: url(../img/enjinai_kiryu.jpg);
+    background-size: cover; }
 
 /*# sourceMappingURL=youth.css.map */
