youthインナーの設定

--- a/css/youth.css
+++ b/css/youth.css
@@ -28,8 +28,8 @@ main {
     width: 100%;
     height: 100vh;
     top: 0;
-    left: 0;
-    position: abdolute;
+    left: 100%;
+    position: absolute;
     background-image: url(../img/enjinai_kiryu.jpg);
     background-size: cover; }
     main .top .title-text {
@@ -37,29 +37,98 @@ main {
       main .top .title-text h1 {
         font-size: 3em;
         padding-top: 100px; }
+      main .top .title-text h2 {
+        padding-top: 50px;
+        line-height: 3em; }
   main .eye {
     width: 100%;
     height: 100vh;
     top: 0;
     left: 100%;
-    position: abdolute;
-    background-image: url(../img/enjinai_kiryu.jpg);
+    position: absolute;
+    background-image: url(../img/enjinai_ushio.jpg);
     background-size: cover; }
+    main .eye h1 {
+      font-size: 4em;
+      position: absolute;
+      top: 100px;
+      left: 30px; }
+    main .eye h2 {
+      position: absolute;
+      bottom: 30px;
+      left: 50px;
+      font-size: 1.5em; }
+      main .eye h2 a {
+        color: #000; }
+    main .eye p {
+      width: 500px;
+      box-sizing: border-box;
+      padding: 30px;
+      background-color: rgba(255, 255, 255, 0.5);
+      font-size: 0.9em;
+      letter-spacing: 0.2em;
+      position: absolute;
+      bottom: 30px;
+      right: 50px; }
   main .stylist {
     width: 100%;
     height: 100vh;
     top: 0;
-    left: 200%;
-    position: abdolute;
-    background-image: url(../img/enjinai_kiryu.jpg);
+    left: 0%;
+    position: absolute;
+    background-image: url(../img/enjinai_mori.jpg);
     background-size: cover; }
+    main .stylist h1 {
+      font-size: 4em;
+      position: absolute;
+      top: 100px;
+      right: 30px; }
+    main .stylist h2 {
+      position: absolute;
+      bottom: 30px;
+      right: 50px;
+      font-size: 1.5em; }
+      main .stylist h2 a {
+        color: #000; }
+    main .stylist p {
+      width: 500px;
+      box-sizing: border-box;
+      padding: 30px;
+      background-color: rgba(255, 255, 255, 0.5);
+      font-size: 0.9em;
+      letter-spacing: 0.2em;
+      position: absolute;
+      bottom: 30px;
+      left: 50px; }
   main .dareka {
     width: 100%;
     height: 100vh;
     top: 0;
     left: 300%;
-    position: abdolute;
-    background-image: url(../img/enjinai_kiryu.jpg);
+    position: absolute;
+    background-image: url(../img/enjinai_ibata.jpg);
     background-size: cover; }
+  main h1 {
+    font-size: 4em;
+    position: absolute;
+    top: 100px;
+    left: 30px; }
+  main h2 {
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
+    font-size: 1.5em; }
+    main h2 a {
+      color: #000; }
+  main p {
+    width: 500px;
+    box-sizing: border-box;
+    padding: 30px;
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 0.9em;
+    letter-spacing: 0.2em;
+    position: absolute;
+    bottom: 30px;
+    right: 50px; }
 
 /*# sourceMappingURL=youth.css.map */
