--- a/css/enjinai.css
+++ b/css/enjinai.css
@@ -7,6 +7,22 @@
   margin: 0 auto;
   overflow: hidden; }
 
+body {
+  background-size: 100%;
+  background-position: center center; }
+
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 30;
+  height: 56px;
+  background-color: #fff;
+  box-shadow: 0px 0px 1px 1px #888; }
+  nav h3 {
+    text-align: center;
+    padding-top: 8px; }
+
 main article {
   margin-top: 100px; }
   main article h3 {
@@ -61,7 +77,36 @@ main article {
 
 footer {
   width: 100%;
-  height: 180px; }
+  height: 180px;
+  position: relative; }
+  footer h4 {
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 50%;
+    margin-left: -25px;
+    color: #fff;
+    background-color: #000;
+    width: 50px;
+    height: 20px;
+    font-size: 10px;
+    font-weight: normal;
+    cursor: pointer; }
+    footer h4 a {
+      text-decoration: none;
+      color: #fff; }
+  footer .sns {
+    text-align: center;
+    width: 120px;
+    margin: 0 auto;
+    padding: 10px 0; }
+    footer .sns p {
+      padding-bottom: 10px; }
+    footer .sns .icon {
+      float: left;
+      width: 40px;
+      font-size: 25px;
+      color: #000; }
   footer p {
     text-align: center;
     padding-top: 30px;
