--- a/scss/enjinai.scss
+++ b/scss/enjinai.scss
@@ -13,7 +13,28 @@
 	overflow: hidden;
 }
 
+body{
+	// background-image: url(../img/enjinai_logo.png);
+	background-size: 100%;
+	background-position: center center;
+}
 
+nav{
+	position: fixed;
+	top: 0;
+	// background-color: rgba(216,216,216,0.88);
+	// background-color: #d8d8d8;
+	width: 100%;
+	z-index: 30;
+	height: 56px;
+	background-color: #fff;
+	box-shadow: 0px 0px 1px 1px #888;
+	h3{
+		text-align: center;
+		padding-top: 8px;
+
+	}
+}
 
 
 main{
