--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -36,7 +36,6 @@ main{
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
-	object-fit: cover;
 	.top{
 		width: 100%;
 		height: 100vh;
@@ -103,6 +102,7 @@ main{
 		background-size: cover;
 		h1{
 			font-size: 4em;
+			width: 350px;
 			position: absolute;
 			top: 100px;
 			right: 30px;
