更新忘れていた。

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -19,15 +19,139 @@
 nav{
 	position: fixed;
 	top: 0;
-	background-color: rgba(255,255,255,0.2);
+	// background-color: rgba(216,216,216,0.88);
+	// background-color: #d8d8d8;
 	width: 100%;
 	z-index: 30;
+	height: 56px;
+	background-color: #fff;
+	box-shadow: 0px 0px 1px 1px #888;
 	h3{
 		text-align: center;
-		padding: 0.7em 0;
+		padding-top: 8px;
 	}
-	&:hover{
-		background-color: rgba(255,255,255,0.8);
+	.ham{
+		display: inline-block;
+		vertical-align: top;
+		position: relative;
+		width: 35px;
+		height: 30px;
+		float: right;
+		right: 50px;
+		top: -40px;
+		cursor: pointer;
+		.line{
+			width: 35px;
+			height: 4px;
+			position: absolute;
+			background-color: #000;
+			border-radius: 20%;
+		}
+		.line1{
+			top: 0;
+			right: 0;
+		}
+		.line2{
+			top: 8px;
+			right: 0;
+		}
+		.line3{
+			top: 16px;
+			right: 0;
+		}
+		.line4{
+			top: 24px;
+			right: 0;
+		}
+	}
+}
+
+.g-nav{
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	z-index: 25;
+	background-color: rgba(255,255,255,0.9);
+	box-sizing:border-box;
+	padding-top: 100px;
+	display: none;
+	.nav-con{
+		width: 900px;
+		margin: 0 auto;
+		.nav-img{
+			width: 400px;
+			margin-left: 70px;
+			overflow: hidden;
+			height: 424px;
+			float: left;
+			.nav-slide{
+				position: relative;
+				width: 100%;
+				img{
+					position: absolute;
+					top: 30px;
+					left: 0;
+					width: 100%;	
+					display: none;
+				}
+			}
+		}
+		ul{
+			width: 430px;
+			padding-bottom: 120px;
+			float: left;
+			li{
+				list-style-type: none;
+				a{
+					text-decoration: none;
+					color: #000;
+					// font-weight: bold;
+					font-size: 2.4em;
+					line-height: 2;
+					-webkit-transition: color .25s ease;
+					   -moz-transition: color .25s ease;
+					    -ms-transition: color .25s ease;
+					     -o-transition: color .25s ease;
+					        transition: color .25s ease;
+					&:hover{
+						color: rgba(0,0,0,0.6)
+					}
+				}
+			}
+		}
+	}
+	footer{
+		width: 100%;
+		height: 180px;
+		float: left;
+		margin-top: 30px;
+		.sns{
+			text-align: center;
+			width: 120px;
+			margin: 0 auto;
+			padding: 10px 0;
+			p{
+				padding-bottom: 10px;
+				font-size: 10px;
+				text-align: center;
+			}
+			.icon{
+				float: left;
+				width: 40px;
+				font-size: 25px;
+				color: #000;
+			}
+		}
+		#copy{
+			text-align: center;
+			padding-top: 30px;
+			font-size: 10px;
+			letter-spacing: 0.2em;
+			#c{
+				font-size: 12px;
+				margin-top:3px; 
+			}
+		}
 	}
 }
 
@@ -60,6 +184,7 @@ header{
 			}
 			h2{
 				font-size: 1em;
+				letter-spacing: 0.1em;
 			}
 		}
 	}
@@ -75,6 +200,9 @@ main{
 		box-sizing:border-box;
 		letter-spacing: 0.14em;
 		line-height: 1.7;
+		p{
+			text-shadow: 4px 2px 0 rgba(255,255,255,0.5);
+		}
 	}
 	.big-com1{
 		height: 100vh;
@@ -95,6 +223,11 @@ main{
 			position: absolute;
 			top: 35%;
 			color: #fff;
+			h3{
+				letter-spacing: 0.4em;
+				text-shadow: 3px 5px 0 #000;
+				font-weight: normal;
+			}
 		}
 	}
 	.small-com1{
@@ -166,6 +299,11 @@ main{
 			top: 35%;
 			color: #fff;
 			text-align: center;
+			h3{
+				letter-spacing: 0.4em;
+				text-shadow: 3px 5px 0 #000;
+				font-weight: normal;
+			}
 		}
 	}
 	.small-com3{
@@ -192,6 +330,14 @@ main{
 			padding:3%;
 			background-color: rgba(0,0,0,1);
 			color: #fff;
+		}
+	}
+	.image{
+		padding: 150px 0 100px;
+		text-align: center;
+		font-size: 0.8em;
+		img{
+			width: 500px;
 		}
 	}
 }
@@ -233,7 +379,7 @@ footer{
 			color: #000;
 		}
 	}
-	p{
+	.follow{
 		text-align: center;
 		padding-top: 30px;
 		font-size: 10px;
