--- a/css/enjinai.css
+++ b/css/enjinai.css
@@ -22,6 +22,107 @@ nav {
   nav h3 {
     text-align: center;
     padding-top: 8px; }
+  nav .ham {
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    width: 35px;
+    height: 30px;
+    float: right;
+    right: 50px;
+    top: -40px;
+    cursor: pointer; }
+    nav .ham .line {
+      width: 35px;
+      height: 4px;
+      position: absolute;
+      background-color: #000;
+      border-radius: 20%; }
+    nav .ham .line1 {
+      top: 0;
+      right: 0; }
+    nav .ham .line2 {
+      top: 8px;
+      right: 0; }
+    nav .ham .line3 {
+      top: 16px;
+      right: 0; }
+    nav .ham .line4 {
+      top: 24px;
+      right: 0; }
+
+.g-nav {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 25;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding-top: 100px;
+  display: none; }
+  .g-nav .nav-con {
+    width: 900px;
+    margin: 0 auto; }
+    .g-nav .nav-con .nav-img {
+      width: 400px;
+      margin-left: 70px;
+      overflow: hidden;
+      height: 424px;
+      float: left; }
+      .g-nav .nav-con .nav-img .nav-slide {
+        position: relative;
+        width: 100%; }
+        .g-nav .nav-con .nav-img .nav-slide img {
+          position: absolute;
+          top: 30px;
+          left: 0;
+          width: 100%;
+          display: none; }
+    .g-nav .nav-con ul {
+      width: 430px;
+      padding-bottom: 120px;
+      float: left; }
+      .g-nav .nav-con ul li {
+        list-style-type: none; }
+        .g-nav .nav-con ul li a {
+          text-decoration: none;
+          color: #000;
+          font-size: 2.4em;
+          line-height: 2;
+          -webkit-transition: color .25s ease;
+          -moz-transition: color .25s ease;
+          -ms-transition: color .25s ease;
+          -o-transition: color .25s ease;
+          transition: color .25s ease; }
+          .g-nav .nav-con ul li a:hover {
+            color: rgba(0, 0, 0, 0.6); }
+  .g-nav footer {
+    width: 100%;
+    height: 180px;
+    float: left;
+    margin-top: 30px; }
+    .g-nav footer .sns {
+      text-align: center;
+      width: 120px;
+      margin: 0 auto;
+      padding: 10px 0; }
+      .g-nav footer .sns p {
+        padding-bottom: 10px;
+        font-size: 10px;
+        text-align: center; }
+      .g-nav footer .sns .icon {
+        float: left;
+        width: 40px;
+        font-size: 25px;
+        color: #000; }
+    .g-nav footer #copy {
+      text-align: center;
+      padding-top: 30px;
+      font-size: 10px;
+      letter-spacing: 0.2em; }
+      .g-nav footer #copy #c {
+        font-size: 12px;
+        margin-top: 3px; }
 
 main article {
   margin-top: 100px; }
