--- a/css/home.css
+++ b/css/home.css
@@ -10,14 +10,115 @@
 nav {
   position: fixed;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.2);
   width: 100%;
-  z-index: 30; }
+  z-index: 30;
+  height: 56px;
+  background-color: #fff;
+  box-shadow: 0px 0px 1px 1px #888; }
   nav h3 {
     text-align: center;
-    padding: 0.7em 0; }
-  nav:hover {
-    background-color: rgba(255, 255, 255, 0.8); }
+    padding-top: 8px; }
+  nav .ham {
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    width: 35px;
+    height: 30px;
+    float: right;
+    right: 50px;
+    top: -40px;
+    cursor: pointer; }
+    nav .ham .line {
+      width: 35px;
+      height: 4px;
+      position: absolute;
+      background-color: #000;
+      border-radius: 20%; }
+    nav .ham .line1 {
+      top: 0;
+      right: 0; }
+    nav .ham .line2 {
+      top: 8px;
+      right: 0; }
+    nav .ham .line3 {
+      top: 16px;
+      right: 0; }
+    nav .ham .line4 {
+      top: 24px;
+      right: 0; }
+
+.g-nav {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 25;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-sizing: border-box;
+  padding-top: 100px;
+  display: none; }
+  .g-nav .nav-con {
+    width: 900px;
+    margin: 0 auto; }
+    .g-nav .nav-con .nav-img {
+      width: 400px;
+      margin-left: 70px;
+      overflow: hidden;
+      height: 424px;
+      float: left; }
+      .g-nav .nav-con .nav-img .nav-slide {
+        position: relative;
+        width: 100%; }
+        .g-nav .nav-con .nav-img .nav-slide img {
+          position: absolute;
+          top: 30px;
+          left: 0;
+          width: 100%;
+          display: none; }
+    .g-nav .nav-con ul {
+      width: 430px;
+      padding-bottom: 120px;
+      float: left; }
+      .g-nav .nav-con ul li {
+        list-style-type: none; }
+        .g-nav .nav-con ul li a {
+          text-decoration: none;
+          color: #000;
+          font-size: 2.4em;
+          line-height: 2;
+          -webkit-transition: color .25s ease;
+          -moz-transition: color .25s ease;
+          -ms-transition: color .25s ease;
+          -o-transition: color .25s ease;
+          transition: color .25s ease; }
+          .g-nav .nav-con ul li a:hover {
+            color: rgba(0, 0, 0, 0.6); }
+  .g-nav footer {
+    width: 100%;
+    height: 180px;
+    float: left;
+    margin-top: 30px; }
+    .g-nav footer .sns {
+      text-align: center;
+      width: 120px;
+      margin: 0 auto;
+      padding: 10px 0; }
+      .g-nav footer .sns p {
+        padding-bottom: 10px;
+        font-size: 10px;
+        text-align: center; }
+      .g-nav footer .sns .icon {
+        float: left;
+        width: 40px;
+        font-size: 25px;
+        color: #000; }
+    .g-nav footer #copy {
+      text-align: center;
+      padding-top: 30px;
+      font-size: 10px;
+      letter-spacing: 0.2em; }
+      .g-nav footer #copy #c {
+        font-size: 12px;
+        margin-top: 3px; }
 
 header {
   background-color: #888;
@@ -45,7 +146,8 @@ header {
         line-height: 100%;
         padding-bottom: 15px; }
       header .main-visual .text h2 {
-        font-size: 1em; }
+        font-size: 1em;
+        letter-spacing: 0.1em; }
 
 main .msg, main .msg2 {
   height: 100vh;
@@ -56,6 +158,8 @@ main .msg, main .msg2 {
   box-sizing: border-box;
   letter-spacing: 0.14em;
   line-height: 1.7; }
+  main .msg p, main .msg2 p {
+    text-shadow: 4px 2px 0 rgba(255, 255, 255, 0.5); }
 main .big-com1 {
   height: 100vh;
   overflow: hidden;
@@ -73,6 +177,10 @@ main .big-com1 {
     position: absolute;
     top: 35%;
     color: #fff; }
+    main .big-com1 .comment h3 {
+      letter-spacing: 0.4em;
+      text-shadow: 3px 5px 0 #000;
+      font-weight: normal; }
 main .small-com1 {
   height: 100vh;
   overflow: hidden;
@@ -133,6 +241,10 @@ main .big-com2 {
     top: 35%;
     color: #fff;
     text-align: center; }
+    main .big-com2 .comment h3 {
+      letter-spacing: 0.4em;
+      text-shadow: 3px 5px 0 #000;
+      font-weight: normal; }
 main .small-com3 {
   height: 100vh;
   overflow: hidden;
@@ -155,6 +267,12 @@ main .small-com3 {
     padding: 3%;
     background-color: black;
     color: #fff; }
+main .image {
+  padding: 150px 0 100px;
+  text-align: center;
+  font-size: 0.8em; }
+  main .image img {
+    width: 500px; }
 
 footer {
   width: 100%;
@@ -188,12 +306,12 @@ footer {
       width: 40px;
       font-size: 25px;
       color: #000; }
-  footer p {
+  footer .follow {
     text-align: center;
     padding-top: 30px;
     font-size: 10px;
     letter-spacing: 0.2em; }
-    footer p #c {
+    footer .follow #c {
       font-size: 12px;
       margin-top: 3px; }
 
