--- a/css/main.css
+++ b/css/main.css
@@ -36,8 +36,7 @@ header {
     -o-transition: all .5s ease;
     transition: all .5s ease; }
     header nav:hover {
-      background-color: #fff;
-      border-bottom: 1px #000 solid; }
+      background-color: #fff; }
     header nav img {
       width: 80px;
       padding-top: 10px; }
@@ -98,19 +97,24 @@ header {
     width: 330px;
     margin-right: 50px;
     float: left; }
+  .cover h3 {
+    text-align: center;
+    font-size: 2.8em; }
   .cover .select {
     float: left;
     overflow: hidden; }
     .cover .select img {
       bottom: -10px;
       margin-right: 1px; }
-    .cover .select h3 {
+    .cover .select h4 {
       text-align: center;
       font-weight: normal;
       display: inline-block; }
     .cover .select .sub-cover {
       bottom: 0;
       position: absolute; }
+      .cover .select .sub-cover .covers {
+        cursor: pointer; }
 
 .contents {
   height: 50vh;
@@ -132,7 +136,9 @@ header {
   .contents2 p {
     font-size: 14px;
     margin-top: 50px;
-    padding-bottom: 70px; }
+    padding-bottom: 70px;
+    letter-spacing: 0.2em;
+    line-height: 1.33; }
   .contents2 img {
     width: 800px; }
   .contents2 .con-img {
