--- a/scss/enjinai.scss
+++ b/scss/enjinai.scss
@@ -32,10 +32,131 @@ nav{
 	h3{
 		text-align: center;
 		padding-top: 8px;
-
+	}
+	.ham{
+		display: inline-block;
+		vertical-align: top;
+		position: relative;
+		width: 35px;
+		height: 30px;
+		float: right;
+		right: 50px;
+		top: -40px;
+		cursor: pointer;
+		.line{
+			width: 35px;
+			height: 4px;
+			position: absolute;
+			background-color: #000;
+			border-radius: 20%;
+		}
+		.line1{
+			top: 0;
+			right: 0;
+		}
+		.line2{
+			top: 8px;
+			right: 0;
+		}
+		.line3{
+			top: 16px;
+			right: 0;
+		}
+		.line4{
+			top: 24px;
+			right: 0;
+		}
 	}
 }
 
+.g-nav{
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	z-index: 25;
+	background-color: #fff;
+	box-sizing:border-box;
+	padding-top: 100px;
+	display: none;
+	.nav-con{
+		width: 900px;
+		margin: 0 auto;
+		.nav-img{
+			width: 400px;
+			margin-left: 70px;
+			overflow: hidden;
+			height: 424px;
+			float: left;
+			.nav-slide{
+				position: relative;
+				width: 100%;
+				img{
+					position: absolute;
+					top: 30px;
+					left: 0;
+					width: 100%;	
+					display: none;
+				}
+			}
+		}
+		ul{
+			width: 430px;
+			padding-bottom: 120px;
+			float: left;
+			li{
+				list-style-type: none;
+				a{
+					text-decoration: none;
+					color: #000;
+					// font-weight: bold;
+					font-size: 2.4em;
+					line-height: 2;
+					-webkit-transition: color .25s ease;
+					   -moz-transition: color .25s ease;
+					    -ms-transition: color .25s ease;
+					     -o-transition: color .25s ease;
+					        transition: color .25s ease;
+					&:hover{
+						color: rgba(0,0,0,0.6)
+					}
+				}
+			}
+		}
+	}
+	footer{
+		width: 100%;
+		height: 180px;
+		float: left;
+		margin-top: 30px;
+		.sns{
+			text-align: center;
+			width: 120px;
+			margin: 0 auto;
+			padding: 10px 0;
+			p{
+				padding-bottom: 10px;
+				font-size: 10px;
+				text-align: center;
+			}
+			.icon{
+				float: left;
+				width: 40px;
+				font-size: 25px;
+				color: #000;
+			}
+		}
+		#copy{
+			text-align: center;
+			padding-top: 30px;
+			font-size: 10px;
+			letter-spacing: 0.2em;
+			#c{
+				font-size: 12px;
+				margin-top:3px; 
+			}
+		}
+	}
+}
 
 main{
 	article{
