--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,7 +50,6 @@ header{
 		        transition: all .5s ease;
 		&:hover{
 			background-color: #fff;
-			border-bottom: 1px #000 solid;
 		}
 		img{
 			width: 80px;
@@ -131,6 +130,11 @@ header{
 		margin-right: 50px;
 		float: left;
 	}
+	h3{
+		text-align: center;
+		font-size: 2.8em;
+		// padding-bottom: 100px;
+	}
 	.select{
 		float: left;
 		overflow: hidden;
@@ -138,7 +142,7 @@ header{
 			bottom: -10px;
 			margin-right: 1px;
 		}
-		h3{
+		h4{
 			text-align: center;
 			font-weight: normal;
 			display: inline-block;
@@ -146,6 +150,9 @@ header{
 		.sub-cover{
 			bottom: 0;
 			position: absolute;
+			.covers{
+				cursor: pointer;
+			}
 		}
 	}
 }
@@ -174,6 +181,8 @@ header{
 		font-size: 14px;
 		margin-top: 50px;
 		padding-bottom: 70px;
+		letter-spacing: 0.2em;
+		line-height: 1.33;
 	}
 	img{
 		width: 800px;
