--- a/css/enjinai.css
+++ b/css/enjinai.css
@@ -11,6 +11,20 @@ body {
   background-size: 100%;
   background-position: center center; }
 
+.start {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  text-align: center; }
+  .start img {
+    width: 550px;
+    margin: 30px 0; }
+  .start p {
+    color: #fff; }
+
 nav {
   position: fixed;
   top: 0;
@@ -117,7 +131,6 @@ nav {
         color: #000; }
     .g-nav footer #copy {
       text-align: center;
-      padding-top: 30px;
       font-size: 10px;
       letter-spacing: 0.2em; }
       .g-nav footer #copy #c {
