--- a/css/main.css
+++ b/css/main.css
@@ -86,30 +86,31 @@ header {
       font-size: 2em; }
 
 .cover {
-  height: 100vh;
   width: 100%;
   margin: 150px 0; }
   .cover .container {
-    height: 465px;
     overflow: hidden;
-    position: relative; }
+    position: relative;
+    text-align: center; }
   .cover .main-cover {
-    width: 330px;
-    margin-right: 50px;
+    width: 530px;
     float: left; }
+    .cover .main-cover img {
+      width: 100%; }
   .cover h3 {
     text-align: center;
-    font-size: 2.8em; }
+    font-size: 2.8em;
+    padding-bottom: 40px; }
   .cover .select {
     float: left;
-    overflow: hidden; }
+    overflow: hidden;
+    width: 160px;
+    margin-left: 10px; }
     .cover .select img {
-      bottom: -10px;
-      margin-right: 1px; }
-    .cover .select h4 {
-      text-align: center;
-      font-weight: normal;
-      display: inline-block; }
+      width: 100%;
+      cursor: pointer; }
+      .cover .select img:hover {
+        opacity: 0.8; }
     .cover .select .sub-cover {
       bottom: 0;
       position: absolute; }
