--- a/scss/enjinai.scss
+++ b/scss/enjinai.scss
@@ -19,6 +19,23 @@ body{
 	background-position: center center;
 }
 
+.start{
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0,0,0,0.9);
+	position: fixed;
+	top: 0;
+	z-index: 100;
+	text-align: center;
+	img{
+		width: 550px;
+		margin: 30px 0;
+	}
+	p{
+		color: #fff;
+	}
+}
+
 nav{
 	position: fixed;
 	top: 0;
@@ -147,7 +164,6 @@ nav{
 		}
 		#copy{
 			text-align: center;
-			padding-top: 30px;
 			font-size: 10px;
 			letter-spacing: 0.2em;
 			#c{
