--- a/scss/home.scss
+++ b/scss/home.scss
@@ -141,6 +141,9 @@ nav{
 				font-size: 25px;
 				color: #000;
 			}
+			#follow{
+				padding-top: 0;
+			}
 		}
 		#copy{
 			text-align: center;
@@ -181,10 +184,12 @@ header{
 				letter-spacing: 0.1em;
 				line-height: 100%;
 				padding-bottom: 15px;
+				color: #fff;
 			}
 			h2{
-				font-size: 1em;
-				letter-spacing: 0.1em;
+				font-size: 1.2em;
+				letter-spacing: 0.2em;
+				color: #fff;
 			}
 		}
 	}
@@ -369,8 +374,10 @@ footer{
 		width: 120px;
 		margin: 0 auto;
 		padding: 10px 0;
-		p{
+		#follow{
 			padding-bottom: 10px;
+			font-size: 10px;
+			padding-top: 30px;
 		}
 		.icon{
 			float: left;
@@ -379,7 +386,7 @@ footer{
 			color: #000;
 		}
 	}
-	.follow{
+	p{
 		text-align: center;
 		padding-top: 30px;
 		font-size: 10px;
