--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,35 +117,37 @@ header{
 }
 
 .cover{
-	height: 100vh;
 	width: 100%;
 	margin: 150px 0;
 	.container{
-		height: 465px;
 		overflow: hidden;
 		position: relative;
+		text-align: center;
 	}
 	.main-cover{
-		width: 330px;
-		margin-right: 50px;
+		width: 530px;
 		float: left;
+		img{
+			width: 100%;
+		}
 	}
 	h3{
 		text-align: center;
 		font-size: 2.8em;
+		padding-bottom: 40px;
 		// padding-bottom: 100px;
 	}
 	.select{
 		float: left;
 		overflow: hidden;
+		width: 160px;
+		margin-left: 10px;
 		img{
-			bottom: -10px;
-			margin-right: 1px;
-		}
-		h4{
-			text-align: center;
-			font-weight: normal;
-			display: inline-block;
+			width: 100%;
+			cursor: pointer;
+			&:hover{
+				opacity: 0.8;
+			}
 		}
 		.sub-cover{
 			bottom: 0;
