--- a/css/enjinai.css
+++ b/css/enjinai.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0; }
 
+.wrapper {
+  display: none; }
+
 .container {
   width: 850px;
   margin: 0 auto;
@@ -14,11 +17,19 @@ body {
 .start {
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: black;
   position: fixed;
   top: 0;
   z-index: 100;
-  text-align: center; }
+  text-align: center;
+  display: none; }
+  .start .batu {
+    position: absolute;
+    right: 40px;
+    top: 0;
+    color: #fff;
+    font-size: 50px;
+    cursor: pointer; }
   .start img {
     width: 550px;
     margin: 30px 0; }
@@ -70,7 +81,7 @@ nav {
   height: 100vh;
   position: fixed;
   z-index: 25;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   box-sizing: border-box;
   padding-top: 100px;
   display: none; }
@@ -129,6 +140,8 @@ nav {
         width: 40px;
         font-size: 25px;
         color: #000; }
+      .g-nav footer .sns #follow {
+        padding-top: 0; }
     .g-nav footer #copy {
       text-align: center;
       font-size: 10px;
