--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ header {
   overflow: hidden;
   background-color: #888; }
   header nav {
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     height: 60px;
@@ -49,7 +49,7 @@ header {
       header nav ul li {
         list-style-type: none;
         float: left;
-        padding: 0 10px; }
+        padding: 0 12px; }
         header nav ul li a {
           color: #000;
           text-decoration: none;
@@ -63,6 +63,30 @@ header {
             color: rgba(0, 0, 0, 0.5); }
   header .main-visual img {
     width: 100%; }
+
+.circles {
+  position: fixed;
+  right: 10px;
+  top: 50%;
+  height: 300px;
+  width: 50px;
+  display: none; }
+  .circles .circle {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: rgba(33, 33, 33, 0.6);
+    position: absolute; }
+  .circles .maru1 {
+    top: 0; }
+  .circles .maru2 {
+    top: 40px; }
+  .circles .maru3 {
+    top: 80px; }
+  .circles .maru4 {
+    top: 120px; }
+  .circles .maru5 {
+    top: 160px; }
 
 .magazine {
   height: 100vh;
