--- a/scss/enjinai.scss
+++ b/scss/enjinai.scss
@@ -7,6 +7,10 @@
 	padding: 0;
 }
 
+.wrapper{
+	display: none;
+}
+
 .container{
 	width:850px;
 	margin: 0 auto;
@@ -22,11 +26,20 @@ body{
 .start{
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(0,0,0,0.9);
+	background-color: rgba(0,0,0,1);
 	position: fixed;
 	top: 0;
 	z-index: 100;
 	text-align: center;
+	display: none;
+	.batu{
+		position: absolute;
+		right: 40px;
+		top: 0;
+		color: #fff;
+		font-size: 50px;
+		cursor: pointer;
+	}
 	img{
 		width: 550px;
 		margin: 30px 0;
@@ -91,7 +104,7 @@ nav{
 	height: 100vh;
 	position: fixed;
 	z-index: 25;
-	background-color: #fff;
+	background-color: rgba(255,255,255,0.9);
 	box-sizing:border-box;
 	padding-top: 100px;
 	display: none;
@@ -160,6 +173,9 @@ nav{
 				width: 40px;
 				font-size: 25px;
 				color: #000;
+			}
+			#follow{
+				padding-top: 0;
 			}
 		}
 		#copy{
