--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,37 @@
+@font-face {
+  font-family: kozG-EL;
+  src: url(../fonts_web/KozGoPro-ExtraLight.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-H;
+  src: url(../fonts_web/KozGoPro-Heavy.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-L;
+  src: url(../fonts_web/KozGoPro-Light.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-M;
+  src: url(../fonts_web/KozGoPro-Medium.otf) format("opentype"); }
+@font-face {
+  font-family: kozG-R;
+  src: url(../fonts_web/KozGoPro-Regular.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-B;
+  src: url(../fonts_web/KozMinPro-Bold.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-EL;
+  src: url(../fonts_web/KozMinPro-ExtraLight.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-M;
+  src: url(../fonts_web/KozMinPro-Medium.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-R;
+  src: url(../fonts_web/KozMinPro-Regular.otf) format("opentype"); }
+@font-face {
+  font-family: kozM-H;
+  src: url(../fonts_web/KozMinPro-Heavy.otf) format("opentype"); }
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: kozG-L; }
 
 .container {
   width: 700px;
@@ -95,17 +126,21 @@ header {
   background-color: #fff; }
   .magazine .title {
     font-weight: normal;
-    font-size: 14px; }
+    font-size: 14px;
+    font-family: kozG-M;
+    float: right;
+    margin-top: 20px; }
   .magazine h1 {
     padding: 10px 0 30px 0;
     font-size: 2.8em;
     font-weight: normal;
-    text-align: center; }
+    margin-left: -20px;
+    font-family: kozG-H; }
   .magazine p {
     letter-spacing: 0.18em;
     font-size: 13px;
-    line-height: 2.1em;
-    text-align: center; }
+    line-height: 1.9em;
+    font-family: kozG-M; }
     .magazine p .big {
       font-size: 2em; }
 
@@ -124,7 +159,9 @@ header {
   .cover h3 {
     text-align: center;
     font-size: 2.8em;
-    padding-bottom: 40px; }
+    padding-bottom: 40px;
+    font-family: kozG-H;
+    letter-spacing: 0.1em; }
   .cover .select {
     float: left;
     overflow: hidden;
@@ -155,7 +192,9 @@ header {
   color: #fff; }
   .contents2 h3 {
     text-align: center;
-    font-size: 2.8em; }
+    font-size: 2.8em;
+    font-family: kozG-H;
+    letter-spacing: 0.1em; }
   .contents2 h4 {
     padding-bottom: 30px; }
   .contents2 p {
@@ -163,7 +202,8 @@ header {
     margin-top: 50px;
     padding-bottom: 70px;
     letter-spacing: 0.2em;
-    line-height: 1.33; }
+    line-height: 1.5;
+    font-family: kozG-R; }
   .contents2 img {
     width: 800px; }
   .contents2 .con-img {
@@ -178,7 +218,9 @@ header {
   .webcontents h3 {
     text-align: center;
     font-size: 2.8em;
-    padding-bottom: 50px; }
+    padding-bottom: 50px;
+    font-family: kozG-H;
+    letter-spacing: 0.1em; }
   .webcontents .webmaga {
     width: 233px;
     height: 233px;
