--- a/css/youth.css
+++ b/css/youth.css
@@ -113,6 +113,7 @@ nav {
           text-decoration: none;
           color: #000;
           font-size: 2.4em;
+          font-family: kozG-M;
           line-height: 2;
           -webkit-transition: color .25s ease;
           -moz-transition: color .25s ease;
@@ -154,7 +155,8 @@ nav {
   height: 100vh;
   z-index: 10;
   top: 0;
-  position: fixed; }
+  position: fixed;
+  font-family: kozG-H; }
   .loop .l-bar {
     position: absolute;
     left: 0;
@@ -163,11 +165,17 @@ nav {
     line-height: 100vh;
     font-size: 2em;
     padding: 0 15px;
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.3); }
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -ms-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease; }
     .loop .l-bar:hover {
-      background-color: rgba(255, 255, 255, 0.8); }
+      background-color: rgba(255, 255, 255, 0.8);
+      color: rgba(0, 0, 0, 0.3); }
   .loop .r-bar {
     position: absolute;
     right: 0;
@@ -176,11 +184,17 @@ nav {
     line-height: 100vh;
     font-size: 2em;
     padding: 0 15px;
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.3); }
+    background-color: rgba(255, 255, 255, 0.1);
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -ms-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease; }
     .loop .r-bar:hover {
-      background-color: rgba(255, 255, 255, 0.8); }
+      background-color: rgba(255, 255, 255, 0.8);
+      color: rgba(0, 0, 0, 0.3); }
 
 main {
   position: relative;
@@ -198,13 +212,16 @@ main {
     main .top .title-text {
       text-align: center; }
       main .top .title-text h1 {
-        font-size: 3em;
+        font-size: 4.5em;
         padding-top: 100px;
-        width: 100%; }
+        width: 100%;
+        font-family: kozG-H;
+        letter-spacing: 0.04em; }
       main .top .title-text h2 {
         padding-top: 50px;
         line-height: 3em;
-        width: 100%; }
+        width: 100%;
+        font-family: kozG-H; }
   main .eye {
     width: 100%;
     height: 100vh;
