--- a/scss/youth.scss
+++ b/scss/youth.scss
@@ -106,6 +106,7 @@ nav{
 					color: #000;
 					// font-weight: bold;
 					font-size: 2.4em;
+					font-family: kozG-M;
 					line-height: 2;
 					-webkit-transition: color .25s ease;
 					   -moz-transition: color .25s ease;
@@ -160,6 +161,7 @@ nav{
 	z-index: 10;
 	top: 0;
 	position: fixed;
+	font-family: kozG-H;
 	.l-bar{
 		position: absolute;
 		left: 0;
@@ -168,11 +170,17 @@ nav{
 		line-height: 100vh;
 		font-size: 2em;
 		padding:0 15px;
-		color: rgba(0,0,0,0.3);
+		color: rgba(0,0,0,0.8);
 		cursor: pointer;
-		background-color: rgba(255,255,255,0.3);
+		background-color: rgba(255,255,255,0.1);
+		-webkit-transition: all .25s ease;
+		   -moz-transition: all .25s ease;
+		    -ms-transition: all .25s ease;
+		     -o-transition: all .25s ease;
+		        transition: all .25s ease;
 		&:hover{
 		background-color: rgba(255,255,255,0.8);
+		color: rgba(0,0,0,0.3);
 		}
 	}
 	.r-bar{
@@ -183,11 +191,17 @@ nav{
 		line-height: 100vh;
 		font-size: 2em;
 		padding:0 15px;
-		color: rgba(0,0,0,0.3);
+		color: rgba(0,0,0,0.8);
 		cursor: pointer;
-		background-color: rgba(255,255,255,0.3);
+		background-color: rgba(255,255,255,0.1);
+		-webkit-transition: all .25s ease;
+		   -moz-transition: all .25s ease;
+		    -ms-transition: all .25s ease;
+		     -o-transition: all .25s ease;
+		        transition: all .25s ease;
 		&:hover{
 		background-color: rgba(255,255,255,0.8);
+		color: rgba(0,0,0,0.3);
 		}
 	}
 }
@@ -208,14 +222,17 @@ main{
 		.title-text{
 			text-align: center;
 			h1{
-				font-size: 3em;
+				font-size: 4.5em;
 				padding-top: 100px;		
 				width: 100%;
+				font-family: kozG-H;
+				letter-spacing: 0.04em;
 			}
 			h2{
 				padding-top: 50px;
 				line-height: 3em;
 				width: 100%;
+				font-family: kozG-H;
 			}
 		}
 	}
