--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,14 +44,12 @@ header{
 		height: 60px;
 		z-index: 40;
 		line-height: 60px;
+		color: #fff;
 		-webkit-transition: all .5s ease;
 		   -moz-transition: all .5s ease;
 		    -ms-transition: all .5s ease;
 		     -o-transition: all .5s ease;
 		        transition: all .5s ease;
-		&:hover{
-			background-color: #fff;
-		}
 		img{
 			width: 80px;
 			padding-top:10px;
@@ -68,7 +66,7 @@ header{
 				float: left;
 				padding: 0 12px;
 				a{
-					color: #000;
+					color: #fff;
 					text-decoration: none;
 					display: block;
 					-webkit-transition: all .5s ease;
@@ -84,8 +82,11 @@ header{
 		}
 	}
 	.main-visual{
+		position: relative;
 		img{
 			width: 100%;
+			position: absolute;
+			top: -150px;
 		}
 	}
 }
@@ -156,7 +157,7 @@ header{
 
 .cover{
 	width: 100%;
-	margin: 150px 0;
+	margin: 0 0 150px;
 	.container{
 		overflow: hidden;
 		position: relative;
@@ -173,8 +174,7 @@ header{
 		text-align: center;
 		font-size: 2.8em;
 		padding-bottom: 40px;
-		font-family: kozG-H;
-		letter-spacing: 0.1em;
+		font-family: kozG-EL;
 		// padding-bottom: 100px;
 	}
 	.select{
@@ -215,8 +215,8 @@ header{
 	h3{
 		text-align: center;
 		font-size: 2.8em;
-		font-family: kozG-H;
-		letter-spacing: 0.1em;
+		font-family: kozG-EL;
+		letter-spacing: 0.05em;
 	}
 	h4{
 		padding-bottom: 30px;
@@ -247,12 +247,12 @@ header{
 		text-align: center;
 		font-size: 2.8em;
 		padding-bottom: 50px;
-		font-family: kozG-H;
-		letter-spacing: 0.1em;
+		font-family: kozG-EL;
+		letter-spacing: 0.05em;
 	}
 	.webmaga{
-		width: 233px;
-		height: 233px;
+		width: 266px;
+		height: 266px;
 		border:1px #fff solid;
 		box-sizing:border-box;
 		background-color: #000;
@@ -271,6 +271,7 @@ header{
 		text-align: center;
 		font-size: 2.8em;
 		padding: 30px 0;
+		font-family: KozG-EL;
 		// font-family: kozG-H;
 		// letter-spacing: 0.1em;
 	}
@@ -279,9 +280,12 @@ header{
 		float: left;
 		h4{
 			font-size: 2.3em;
-			border-left: #fff solid 8px;
-			padding-left: 10px;
+			border-left: #fff solid 5px;
+			padding-left: 15px;
 			margin-bottom: 20px;
+			font-weight: normal;
+			font-family: KozG-L;
+			line-height: 1.2;
 		}
 		p{
 			font-size: 1.2em;
@@ -296,8 +300,9 @@ header{
 		h5{
 			font-size: 2em;
 			border-left: #fff solid 4px;
-			padding-left: 6px;
+			padding-left: 10px;
 			margin-bottom: 20px;
+			line-height: 1.2;
 		}
 	}
 	.right2{
@@ -309,8 +314,9 @@ header{
 		h5{
 			font-size: 2em;
 			border-left: #fff solid 4px;
-			padding-left: 6px;
+			padding-left: 10px;
 			margin-bottom: 20px;
+			line-height: 1.2;
 		}
 	}
 }
@@ -326,6 +332,7 @@ header{
 		text-align: center;
 		font-size: 2.8em;
 		padding: 30px 0;
+		font-family: KozG-EL;
 	}
 	a{
 		text-decoration: none;
@@ -383,7 +390,7 @@ footer{
 	p{
 		text-align: center;
 		padding-top: 30px;
-		font-size: 10px;
+		font-size: 9px;
 		letter-spacing: 0.2em;
 		#c{
 			font-size: 12px;
